usecases/models/qwen-math-7b/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qwen-math-7b
  labels:
    kubernetes.io/metadata.name: qwen-math-7b
    opendatahub.io/dashboard: "true"
    app.kubernetes.io/name: qwen-math-7b
    app.kubernetes.io/part-of: qwen-math-7b
  annotations:
