usecases/models/qwen-math-7b/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwen-math-7b-route-svc
  labels:
    app.kubernetes.io/name: qwen-math-7b
    app.kubernetes.io/component: route-service
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    app: isvc.qwen-math-7b-predictor
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
